# rust_todo_cli

./: Cargo.toml  LICENSE  README.md
migrations/: 20240314030803_create_todo.down.sql  20240314030803_create_todo.up.sql
src/: main.rs
