[package]
name = "todo_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "cargo"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
sqlx = { version = "0.7.4", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
